--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"dev": "nodemon server.js"
 	},
 	"dependencies": {
-		"express": "^4.16.3"
+		"express": "^4.16.3",
+		"mongodb": "^3.0.10"
 	},
 	"devDependencies": {
 		"nodemon": "^1.17.5"
