--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"dev": "nodemon server.js"
 	},
 	"dependencies": {
+		"body-parser": "^1.18.3",
 		"express": "^4.16.3",
 		"mongodb": "^3.0.10"
 	},
