--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-tv-shows-status",
+  "name": "my-tv-shows-status_frontend",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Cristi Ciobanu",
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
